fixed alignment

--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -37,7 +37,7 @@ header{
 #loginForm{
   height: 90px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 160px 80px;
   grid-template-rows: 40px 40px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
@@ -75,6 +75,8 @@ hr{
   overflow: visible;
   text-align: center;
   height: 5px;
+  width: 250px;
+  margin: auto;
 }
 
 hr:after{
@@ -86,12 +88,12 @@ hr:after{
 }
 
 .icons{
-  width: auto;
+  width: 250px;
   height: 30px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
-  margin: auto;
+  margin: 0px;
   margin-top: 30px;
 }
 
@@ -101,10 +103,6 @@ hr:after{
   font-size: 25px;
   transition: 0.3s;
   transition-property: transform;
-}
-
-.icons a:not(:last-child){
-  margin-right: 60px;
 }
 
 .icons a:hover{
